# testagent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: env.py  main.py
src/mytools/: server.py
src/testagent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_main.py
